tidied up pom